Closed
Bug 1136803
Opened 11 years ago
Closed 11 years ago
Removing a touch event listener from a window doesn't remove the force-dtc flag on the layer
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
People
(Reporter: kats, Assigned: kats)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
2.46 KB,
patch
|
botond
:
review+
bajaj
:
approval-mozilla-b2g37+
|
Details | Diff | Splinter Review |
While checking Greg's patch on bug 1130016 I noticed that even though his code removed the touchstart listener, the force-dtc flag still persisted on the layer. This happens because the layer at [1] is reused across paints, and we only set the override flag but we never clear it. This is an error in the refactoring patch I landed for bug 1131840.
[1] http://mxr.mozilla.org/mozilla-central/source/layout/base/nsDisplayList.cpp?rev=96d7198bec0a#4171
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8569318 -
Flags: review?(botond)
| Assignee | ||
Updated•11 years ago
|
status-b2g-v2.2:
--- → affected
status-b2g-master:
--- → affected
Comment 2•11 years ago
|
||
Comment on attachment 8569318 [details] [diff] [review]
Patch
Review of attachment 8569318 [details] [diff] [review]:
-----------------------------------------------------------------
Tricky!
Attachment #8569318 -
Flags: review?(botond) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
| Assignee | ||
Comment 5•11 years ago
|
||
Comment on attachment 8569318 [details] [diff] [review]
Patch
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): regression from bug 1131840
User impact if declined: in some cases the APZ will perform less well than it should, because we weren't properly tracking removal of touch listeners from the DOM. Honestly the impact of this is low unless we also land bug 1116579 but the risk is also quite low so requesting uplift anyway.
Testing completed: locally
Risk to taking this patch (and alternatives if risky): very low risk, just fixes a refactoring error.
String or UUID changes made by this patch: none
Attachment #8569318 -
Flags: approval-mozilla-b2g37?
Updated•11 years ago
|
Attachment #8569318 -
Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
Comment 6•11 years ago
|
||
status-firefox37:
--- → wontfix
status-firefox38:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•