Bug 1136803 - Properly remove the force-dtc override flag on retained layers when listeners are removed. r=botond